deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfoapp1-deployment
  namespace: n1
  labels:
    app: podinfoapp1
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector: 
    matchLabels:
      app: podinfoapp1
  template:
    metadata:
      labels:
        app: podinfoapp1
    spec:
      containers:
        - name: podinfoapp1
          image: mypodapp:19
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
            protocol: TCP
          resources:
            requests:              
              memory: ".25Gi"
              cpu: "125m"
            limits:                
              memory: ".5Gi"
              cpu: "250m"         
      serviceAccountName: podinfoapp1-rbac
