ingress-nginx-rule.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: podinfo-app
  namespace: n1
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: podinfoapp1-service
          servicePort: 80
